# iris_telegram_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env.dist  bot.py  config.py  dist.env
app/handlers/: admin.py  echo.py  user.py
app/misc/: filters.py  keyboards.py  utils.py
