[tool.poetry]
name = "tgbot-template"
version = "0.1.0"
description = "aiogram template"
license = "MIT License"
authors = ["Dmitry Drozdov <dinochrom1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b8", allow-prereleases = true}
betterlogging = "^0.2.1"
pydantic-settings = "^2.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
